# CC-Addoption

./: CLAUDE.md
ws1/: birthday_workshop.pptx
ws2/Agents & Vibe coding project/: .gitignore  CLAUDE.md  package-lock.json  package.json
ws2/Agents & Vibe coding project/.claude/: settings.json
ws2/Agents & Vibe coding project/.claude/agents/: bug-investigator.md  code-fixer.md  docs-writer.md  saboteur.md  test-writer.md
ws2/Agents & Vibe coding project/app/: globals.css  layout.tsx  page.tsx
ws2/Agents & Vibe coding project/app/employees/: loading.tsx  page.tsx
ws2/Agents & Vibe coding project/components/dashboard/: action-items.tsx  anniversary-radar.tsx  celebration-confetti.tsx  department-chart.tsx  department-leads.tsx  employment-type-chart.tsx  stats-cards.tsx
ws2/Agents & Vibe coding project/components/employees/: columns.tsx  (+7 more)
ws2/Agents & Vibe coding project/lib/: actions.test.ts  actions.ts  calculations.test.ts  calculations.ts  celebrations.test.ts  celebrations.ts  prisma.ts
ws2/Agents & Vibe coding project/prisma/: schema.prisma  seed.mjs  seed.ts
ws2/Agents & Vibe coding project/types/: index.ts
ws2/Skills/git-summary/: SKILL.md
ws3/mcp_servers/docupedia-mcp-server/: Dockerfile  README.md  auth.py  docupedia_client.py  pyproject.toml  server.py
ws3/mcp_servers/docupedia-mcp-server/tests/: test_auth.py  test_docupedia_client.py
ws3/mcp_servers/greetings-mcp-server/: pyproject.toml  server.py
ws3/mcp_servers/jira-mcp-server/: Dockerfile  README.md  auth.py  jira_client.py  pyproject.toml  server.py
ws3/mcp_servers/jira-mcp-server/tests/: test_auth.py  test_jira_client.py
(+8 files in other folders)
