[project]
name = "docupedia-mcp-server"
version = "0.1.0"
description = "MCP server for Docupedia (Confluence Server/DC) with PAT and session cookie auth"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
