[project]
name = "greetings-mcp-server"
version = "0.1.0"
description = "Simple MCP server that greets people in multiple languages"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
